# qc-node

./: .gitignore  BENCHMARKS.md  Cargo.toml  ECONOMIC_SIM.md  GOVERNANCE.md  MILESTONES.md  QTC_WHITEPAPER_v3.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  THREAT_MODEL.md  Whitepaper_v2.0
.github/workflows/: debug-deps.yml  gen-lock.yml  main.yml  test.yml
docs/: API_REFERENCE.md  GOVERNANCE.md  GRANT_TEMPLATE.md  PROJECT_TRACKER.md  RUN_VALIDATOR.md  TOKENOMICS.md
genesis/: mainnet.json  testnet.json
scripts/: airdrop.ts  launch.sh
specs/: qc-node-v0.1.0.md
src/: config.rs  crypto.rs  lib.rs  main.rs
src/chain/: header.rs  mod.rs  rewards.rs
src/consensus/: mod.rs  producer.rs  registry.rs  validator.rs
src/crypto/: dilithium.rs  mod.rs
src/governance/: mod.rs
src/mempool/: mod.rs
src/net/: handler.rs  mod.rs
src/node/: mod.rs
src/rpc/: methods.rs  mod.rs
src/state/: executor.rs  mod.rs  storage.rs
src/vesting/: mod.rs
